--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,12 @@
     {
       "source": "/as",
       "destination": "https://www.microsoft.com/en-us/p/account-surfer/9phvp9rjr7r7",
-      "permanent": false
+      "permanent": true
+    },
+    {
+      "source": "/CV.pdf",
+      "destination": "/cv.pdf",
+      "permanent": true
     }
   ]
 }
